# kerrbhy

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
common/: Cargo.toml
common/src/: angle.rs  camera.rs  error.rs  lib.rs
crates/event/: Cargo.toml
crates/event/src/: error.rs  lib.rs  timer.rs
crates/graphics/src/: error.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  renderer.rs
crates/gui/src/state/: mod.rs
crates/marcher/: Cargo.toml  build.rs
crates/marcher/src/: lib.rs  shader.rs  shader.wgsl
crates/shader-bindings/: Cargo.toml
crates/shader-bindings/src/: lib.rs
experiments/: aa.toml  adaptive.toml  all.toml  bloom.toml  default.toml  rk4.toml  sdf.toml  sky.toml  view.toml  vol.toml
hardware/event/: Cargo.toml
hardware/event/src/: error.rs  lib.rs  timer.rs
hardware/graphics/: Cargo.toml
hardware/graphics/src/: encoder.rs  lib.rs  pass.rs
hardware/profiler/: Cargo.toml
hardware/profiler/src/: lib.rs
hardware/renderer/: Cargo.toml
hardware/renderer/src/: lib.rs
kerrbhy/: Cargo.toml
kerrbhy/src/: bin.rs  hardware.rs  lib.rs  main.rs  sim.rs  software.rs
kerrbhy/src/fullscreen/: mod.rs
scenes/: all_features.toml  bloom.toml  proc_sky.toml  topdown.toml  topdown_adaptive.toml  topdown_rk4.toml  volume.toml  warping.toml
shaders/fullscreen/: Cargo.toml  build.rs
shaders/fullscreen/src/: lib.rs  shader.rs  shader.wgsl
shaders/marcher/: Cargo.toml  build.rs
shaders/marcher/src/: f32.wgsl  filter.wgsl  lib.rs  rng.wgsl  shader.rs  shader.wgsl
shaders/wgsl-bindgen/: Cargo.toml
shaders/wgsl-bindgen/src/: lib.rs  preprocess.rs
sim/: Cargo.toml  build.rs
sim/src/: app.rs  input.rs  main.rs
sim/src/fullscreen/: mod.rs  shader.wgsl
sim/src/gui/: README.md  egui.wgsl  mod.rs  renderer.rs
sim/src/gui/state/: clipboard.rs
sim/src/ui/: config.rs  file_dialog.rs  mod.rs
software/renderer/: Cargo.toml
software/renderer/src/: lib.rs
software/wcpu/: Cargo.toml
software/wcpu/src/: lib.rs  texture.rs
