[workspace]
members = [
    "crates/*",
    "kerrbhy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# local crates
event = { path = "crates/event" }
graphics = { path = "crates/graphics" }
marcher = { path = "crates/marcher" }
gui = { path = "crates/gui" }
shader-bindings = { path = "crates/shader-bindings" }

# shared dependencies
bytemuck = { version = "1.14", features = [ "derive" ] }
memoffset = "0.9.0"
image = { version = "0.24.8" }
glam = { version = "0.25", features = [ "bytemuck"] }

# graphics
wgpu = { version = "0.19" }
winit = { version = "0.29" }

# gui
egui = {version = "0.26", features = ["bytemuck"]}

# build deps
wgsl_to_wgpu = { version = "0.5" }
regex = "1.10"

# error handling
thiserror = "1.0"
anyhow = "1.0"

# optimise certain packages for non --release builds
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.glam]
opt-level = 3
[profile.dev.package.egui]
opt-level = 3
[profile.dev.package.wgpu]
opt-level = 3