[workspace]
members = ["shaders/*", "hardware/*", "software/*", "kerrbhy", "sim"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# other
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }

# graphics
wgpu = { version = "0.19" }
winit = { version = "0.29" }
raw-window-handle = "0.6.0"

image = { version = "0.24.8" }
memoffset = "0.9.0"

# error handling
thiserror = "1.0"
anyhow = "1.0"

# optimise certain packages for non --release builds
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.glam]
opt-level = 3
[profile.dev.package.egui]
opt-level = 3
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
