[workspace]
members = ["shaders/*", "hardware/*", "software/*", "kerrbhy", "sim", "common"]
resolver = "2"
rust-version = "1.77"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

# graphics
wgpu = { version = "0.19" }
winit = { version = "0.29" }
raw-window-handle = "0.6"

image = { version = "0.25" }
rayon = "1.8"

# error handling
thiserror = "1.0"
anyhow = "1.0"

#logging
log = "0.4"
fern = { version = "0.6" }

# profiling
profiling = { version = "1.0", features = ["profile-with-puffin"] }
puffin = "0.19"

# randomisation
fastrand = "2.0"

# other
bytemuck = { version = "1.14", features = ["derive",] }
glam = { version = "0.26", features = ["bytemuck", "serde"] }
memoffset = "0.9.0"
time = { version = "0.3", features = [ "formatting"] }

[patch.crates-io]
wgsl_to_wgpu = { path = "./wgsl_to_wgpu" }

# optimise certain packages for non --release builds
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.glam]
opt-level = 3
[profile.dev.package.egui]
opt-level = 3
[profile.dev.package.puffin]
opt-level = 3
[profile.dev.package.puffin_egui]
opt-level = 3
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
