[package]
name = "kerrbhy"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "kerrbhy"
path = "src/lib.rs"

[[bin]]
name = "kerrbhy"
path = "src/bin.rs"
required-features = ["binary"]

[features]
binary = ["graphics", "puffin_egui", "eframe" ]

[dependencies]
hardware-renderer = { path = "../hardware/renderer" }
software-renderer = { path = "../software/renderer" }

graphics = { path = "../hardware/graphics", optional = true }

profiling = { workspace = true }
puffin = { workspace = true }
puffin_egui = { version = "0.26.0", optional = true }
eframe = { version = "0.26.2", default-features = false, features = ["glow"], optional = true }

image = { workspace = true }
bytemuck = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }


clap = { version = "4.5", features = ["derive"] }
