[package]
name = "kerrbhy"
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
common = { path = "../common" }
hardware-renderer = { path = "../hardware/renderer" }
software-renderer = { path = "../software/renderer" }

graphics = { path = "../hardware/graphics" }

profiling = { workspace = true }
puffin = { workspace = true }
puffin_egui = { version = "0.26.0" }
eframe = { version = "0.26.2", default-features = false, features = ["glow"] }

image = { workspace = true }
bytemuck = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }

glam = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
