[package]
name = "kerrbhy"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version = "1.77"

[dependencies]
common = { path = "../common" }
hardware-renderer = { path = "../hardware/renderer" }
software-renderer = { path = "../software/renderer" }

graphics = { path = "../hardware/graphics" }
profiler = { path = "../hardware/profiler" }

log = { workspace = true }
fern = { workspace = true }
profiling = { workspace = true }
puffin = { workspace = true }
puffin_http = "0.16"

image = { workspace = true }
bytemuck = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }

glam = { workspace = true }

time = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
