[package]
name = "sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
event = { path = "../hardware/event" }
graphics = { path = "../hardware/graphics" }
hardware-renderer = { path = "../hardware/renderer" }
fullscreen = { path = "../shaders/fullscreen" }

egui = { version = "0.26", features = ["bytemuck"] }

winit = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }

