[package]
name = "sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
event = { path = "../hardware/event" }
graphics = { path = "../hardware/graphics" }
hardware-renderer = { path = "../hardware/renderer" }
fullscreen = { path = "../shaders/fullscreen" }

egui = { version = "0.26", features = ["bytemuck"] }
egui_file = "0.16"
egui-toast = "0.12"
puffin_egui = "0.26.0"

winit = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }

log = { workspace = true }
fern = { workspace = true }

time = { version = "0.3", features = [ "formatting"] }

profiling = { workspace = true }
puffin = { workspace = true }

glam = { workspace = true }