[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graphics = { workspace = true }
event = { workspace = true }
egui = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }

type-map = "0.5.0"
raw-window-handle = "0.6.0"