[package]
name = "marcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graphics = { workspace = true }
event = { workspace = true }

memoffset = { workspace = true }
bytemuck = { workspace = true }

image = { workspace = true }
glam = { workspace = true }

[build-dependencies]
shader-bindings = { workspace = true }