[package]
name = "fullscreen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graphics = { path = "../../hardware/graphics" }
event = { path = "../../hardware/event" }

profiling = { workspace = true }

[build-dependencies]
wgsl-bindgen = { path = "../../shaders/wgsl-bindgen" }
anyhow = { workspace = true }