[package]
name = "marcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graphics = { path = "../../hardware/graphics" }
event = { path = "../../hardware/event" }

memoffset = { workspace = true }
bytemuck = { workspace = true }

image = { workspace = true }
glam = { workspace = true }

profiling = { workspace = true }

[build-dependencies]
wgsl-bindgen = { path = "../../shaders/wgsl-bindgen" }