[package]
name = "marcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../common" }
graphics = { path = "../../hardware/graphics" }
event = { path = "../../hardware/event" }

bytemuck = { workspace = true }

image = { workspace = true }
glam = { workspace = true }

profiling = { workspace = true }

[build-dependencies]
wgsl-bindgen = { path = "../wgsl-bindgen" }
anyhow = { workspace = true }