[package]
name = "software-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../common" }
wcpu = { path = "../wcpu" }

glam = { workspace = true }
image = { workspace = true }
fastrand = { workspace = true }

profiling = { workspace = true }