[package]
name = "wcpu"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
glam = { workspace = true }
rayon = { workspace = true }

profiling = { workspace = true }